(rule
 (deps
  (source_tree roots/unknown_option))
 (action
  (with-outputs-to
   conf_unknown_option.output
   (with-stdin-from
    sample/a.ml
    (chdir
     roots/unknown_option
     (with-accepted-exit-codes
      1
      (run %{bin:ocamlformat} --impl -)))))))

(rule
 (alias runtest)
 (action
  (diff conf_unknown_option.expected conf_unknown_option.output)))

(rule
 (deps
  (source_tree roots/unknown_value))
 (action
  (with-outputs-to
   conf_unknown_value.output
   (with-stdin-from
    sample/a.ml
    (chdir
     roots/unknown_value
     (with-accepted-exit-codes
      1
      (run %{bin:ocamlformat} --impl -)))))))

(rule
 (alias runtest)
 (action
  (diff conf_unknown_value.expected conf_unknown_value.output)))

(rule
 (deps
  (source_tree roots/unknown_value))
 (action
  (with-outputs-to
   env_unknown_option.output
   (with-stdin-from
    sample/a.ml
    (setenv
     OCAMLFORMAT
     "unknown=true"
     (with-accepted-exit-codes
      1
      (run %{bin:ocamlformat} --impl -)))))))

(rule
 (alias runtest)
 (action
  (diff env_unknown_option.expected env_unknown_option.output)))

(rule
 (deps
  (source_tree roots/unknown_value))
 (action
  (with-outputs-to
   env_unknown_value.output
   (setenv
    OCAMLFORMAT
    "type-decl=unknown"
    (with-stdin-from
     sample/a.ml
     (with-accepted-exit-codes
      1
      (run %{bin:ocamlformat} --impl -)))))))

(rule
 (alias runtest)
 (action
  (diff env_unknown_value.expected env_unknown_value.output)))
